[gd_scene load_steps=4 format=4 uid="uid://6ef5b7e3wiby"]

[ext_resource type="TileSet" uid="uid://cblw8ua0amfr" path="res://Tile Set/tile_set.tres" id="1_u8ykh"]
[ext_resource type="Script" path="res://Scripts/map_generator.gd" id="2_s0cup"]
[ext_resource type="Script" path="res://Scripts/movement.gd" id="4_x1usw"]

[node name="Node2D" type="Node2D"]

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]
script = ExtResource("4_x1usw")

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(960, 542)

[node name="Control" type="Control" parent="CharacterBody2D/Camera2D"]
layout_mode = 3
anchors_preset = 0
offset_left = -951.0
offset_top = -534.0
offset_right = 198.0
offset_bottom = 110.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Frequency" type="HSlider" parent="CharacterBody2D/Camera2D/Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 10.0
offset_right = 258.0
offset_bottom = 26.0
min_value = 1.0
max_value = 10.0
step = 0.1
value = 1.0
tick_count = 5

[node name="Label" type="Label" parent="CharacterBody2D/Camera2D/Control/Frequency"]
layout_mode = 0
offset_left = 3.0
offset_top = 15.0
offset_right = 84.0
offset_bottom = 38.0
text = "Frequency"

[node name="Depth" type="HSlider" parent="CharacterBody2D/Camera2D/Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 60.0
offset_right = 258.0
offset_bottom = 76.0
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 5

[node name="Label" type="Label" parent="CharacterBody2D/Camera2D/Control/Depth"]
layout_mode = 0
offset_left = 3.0
offset_top = 15.0
offset_right = 84.0
offset_bottom = 38.0
text = "Depht"

[node name="Water Level" type="HSlider" parent="CharacterBody2D/Camera2D/Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 110.0
offset_right = 258.0
offset_bottom = 126.0
min_value = -1.0
max_value = 10.0
value = 1.0
tick_count = 5

[node name="Label" type="Label" parent="CharacterBody2D/Camera2D/Control/Water Level"]
layout_mode = 0
offset_left = 3.0
offset_top = 15.0
offset_right = 84.0
offset_bottom = 38.0
text = "Water level"

[node name="Height Resolution" type="HSlider" parent="CharacterBody2D/Camera2D/Control"]
layout_mode = 0
offset_left = 20.0
offset_top = 160.0
offset_right = 258.0
offset_bottom = 176.0
min_value = 1.0
max_value = 10.0
value = 1.0
tick_count = 5

[node name="Label" type="Label" parent="CharacterBody2D/Camera2D/Control/Height Resolution"]
layout_mode = 0
offset_left = 3.0
offset_top = 15.0
offset_right = 84.0
offset_bottom = 38.0
text = "Height Resolution
"

[node name="Tile_Map" type="Node2D" parent="."]

[node name="Tile_Set" type="TileMapLayer" parent="Tile_Map"]
position = Vector2(-1972, -1482)
tile_map_data = PackedByteArray("AAABAAAAAAACAAQAAAACAAAAAAACAAYAAAAAAAAAAAAAAAQAAAADAAAAAAAAAAYAAAAEAAAAAAABAAQAAAAFAAAAAAACAAUAAAAGAAAAAAABAAYAAAAHAAAAAAAAAAUAAAAIAAAAAAADAAQAAAAJAAAAAAAEAAQAAAAKAAAAAAAEAAUAAAAAAAEAAAASABQAAAAAAAcAAAAAAAQAAAAAAAgAAAAQABYAAAABAAcAAAAQABYAAAABAAgAAAAQABYAAAABAAYAAAASABYAAAAAAAYAAAASABYAAAD//wYAAAASABYAAAD//wcAAAASABYAAAD//wgAAAASABYAAAAAAAoAAAASABYAAAAAAAsAAAACAAQAAAABAAoAAAASABYAAAABAAsAAAASABYAAAD//woAAAASABYAAAD//wsAAAAQABYAAAD//wwAAAAQABYAAAAAAAwAAAAQABYAAAABAAwAAAASABYAAAD//w4AAAAQABYAAAD//w8AAAAQABYAAAD//xAAAAASABYAAAAAAA4AAAAQABYAAAAAAA8AAAACAAYAAAAAABAAAAASABYAAAABAA4AAAASABYAAAABAA8AAAASABYAAAABABAAAAASABYAAAD//xIAAAASABYAAAD//xMAAAASABYAAAAAABIAAAAQABYAAAAAABMAAAAAAAYAAAABABIAAAAQABYAAAABABMAAAAQABYAAAD//xQAAAASABYAAAAAABQAAAASABYAAAABABQAAAASABYAAAAEABIAAAAQABYAAAAFABIAAAAQABYAAAADABIAAAASABYAAAADABMAAAASABYAAAADABQAAAASABYAAAAEABMAAAAAAAUAAAAEABQAAAAQABYAAAAFABMAAAAQABYAAAAFABQAAAAQABYAAAADAAoAAAAQABYAAAADAAsAAAAQABYAAAADAAwAAAAQABYAAAAEAAoAAAAQABYAAAAEAAsAAAACAAUAAAAEAAwAAAAQABYAAAAFAAoAAAASABYAAAAFAAsAAAASABYAAAAFAAwAAAASABYAAAADAA4AAAAQABYAAAADAA8AAAAQABYAAAADABAAAAASABYAAAAEAA4AAAAQABYAAAAEAA8AAAABAAYAAAAEABAAAAASABYAAAAFAA4AAAAQABYAAAAFAA8AAAAQABYAAAAFABAAAAASABYAAAADAAYAAAASABYAAAADAAcAAAAQABYAAAADAAgAAAAQABYAAAAEAAYAAAASABYAAAAEAAcAAAABAAQAAAAEAAgAAAAQABYAAAAFAAYAAAASABYAAAAFAAcAAAAQABYAAAAFAAgAAAAQABYAAAAHAAYAAAASABYAAAAHAAcAAAAQABYAAAAHAAgAAAAQABYAAAAIAAYAAAAQABYAAAAIAAcAAAADAAQAAAAIAAgAAAAQABYAAAAJAAYAAAAQABYAAAAJAAcAAAAQABYAAAAJAAgAAAAQABYAAAAHAAoAAAAQABYAAAAHAAsAAAAQABYAAAAHAAwAAAAQABYAAAAIAAoAAAAQABYAAAAIAAsAAAAEAAQAAAAIAAwAAAAQABYAAAAJAAoAAAASABYAAAAJAAsAAAAQABYAAAAJAAwAAAAQABYAAAAHAA4AAAAQABYAAAAHAA8AAAAQABYAAAAHABAAAAAQABYAAAAIAA4AAAAQABYAAAAIAA8AAAAEAAUAAAAIABAAAAAQABYAAAAJAA4AAAAQABYAAAAJAA8AAAAQABYAAAAJABAAAAASABYAAAAHABIAAAAQABYAAAAHABMAAAAQABYAAAAHABQAAAASABYAAAAIABIAAAAQABYAAAAIABMAAAADAAUAAAAIABQAAAAQABYAAAAJABIAAAAQABYAAAAJABMAAAAQABYAAAAJABQAAAAQABYAAAALAAYAAAAQABYAAAALAAcAAAAQABYAAAALAAgAAAAQABYAAAAMAAYAAAAQABYAAAAMAAcAAAABAAUAAAAMAAgAAAAQABYAAAANAAYAAAAQABYAAAANAAcAAAAQABYAAAANAAgAAAAQABYAAAALAAAAAAADAAUAAAABAAEAAAAWAAQAAAAMAAAAAAABAAUAAAAPAAYAAAASABYAAAAPAAcAAAAQABYAAAAPAAgAAAAQABYAAAAQAAgAAAAQABYAAAARAAgAAAAQABYAAAARAAcAAAAQABYAAAARAAYAAAAQABYAAAAQAAYAAAASABYAAAAQAAcAAAAQABYAAAAPAAoAAAAQABYAAAAPAAsAAAAQABYAAAAPAAwAAAAQABYAAAAQAAwAAAAQABYAAAAQAAsAAAAQABYAAAAQAAoAAAAQABYAAAARAAwAAAAQABYAAAARAA4AAAAQABYAAAAQAA4AAAAQABYAAAAPAA4AAAAQABYAAAAPAA8AAAAQABYAAAAQAA8AAAAQABYAAAARAA8AAAAQABYAAAAPABAAAAAQABYAAAAPABIAAAAQABYAAAAQABIAAAAQABYAAAARABIAAAAQABYAAAARABMAAAAQABYAAAARABQAAAAQABYAAAAQABQAAAAQABYAAAAQABMAAAAQABYAAAANAAAAAAABAAQAAAAOAAAAAAACAAUAAAAPAAAAAAABAAYAAAAQAAAAAAAAAAUAAAARAAAAAAABAAQAAAASAAAAAAACAAUAAAATAAAAAAABAAYAAAAUAAAAAAAAAAUAAAATAAYAAAAQABYAAAATAAcAAAAQABYAAAATAAgAAAAQABYAAAAUAAgAAAAQABYAAAAUAAcAAAAQABYAAAAVAAgAAAAQABYAAAAVAAcAAAAQABYAAAATAAoAAAAQABYAAAATAAsAAAAQABYAAAATAAwAAAAQABYAAAAUAAsAAAAQABYAAAAUAAwAAAAQABYAAAAUAAoAAAAQABYAAAAVAAoAAAAQABYAAAATAA4AAAAQABYAAAATAA8AAAAQABYAAAAUAA8AAAAQABYAAAAUAA4AAAAQABYAAAAVAA4AAAAQABYAAAAVAA8AAAAQABYAAAAVABAAAAAQABYAAAATABQAAAAQABYAAAAUABQAAAAQABYAAAAVABQAAAAQABYAAAAVABMAAAAQABYAAAAVABIAAAAQABYAAAAUABMAAAAQABYAAAAUABIAAAAQABYAAAAYAAcAAAASABYAAAAYAAYAAAASABYAAAAXAAcAAAASABYAAAAZAAcAAAASABYAAAAYAAgAAAASABYAAAAYAAoAAAASABYAAAAYAAsAAAASABYAAAAYAAwAAAASABYAAAAXAAsAAAASABYAAAAZAAsAAAASABYAAAAYAA4AAAASABYAAAAYAA8AAAASABYAAAAYABAAAAASABYAAAAXAA8AAAASABYAAAAZAA8AAAASABYAAAAYABIAAAASABYAAAAYABMAAAASABYAAAAYABQAAAASABYAAAAXABMAAAASABYAAAAZABMAAAASABYAAAAXAAgAAAASABYAAAAZAAgAAAASABYAAAAZAAYAAAASABYAAAAXAAoAAAASABYAAAAXAAwAAAASABYAAAAZAAwAAAASABYAAAAXAA4AAAASABYAAAAXABAAAAASABYAAAAZAA4AAAASABYAAAAXABIAAAASABYAAAAZABIAAAASABYAAAAZABQAAAASABYAAAAVAAAAAAABAAUAAAAWAAAAAAABAAUAAAAXAAAAAAABAAUAAAAYAAAAAAABAAUAAAAZAAAAAAABAAUAAAAaAAAAAAABAAUAAAAbAAAAAAABAAUAAAAcAAAAAAABAAUAAAAdAAAAAAABAAUAAAAeAAAAAAABAAUAAAAfAAAAAAABAAUAAAAcAAcAAAASABYAAAAcAAgAAAASABYAAAAdAAgAAAASABYAAAAdAAcAAAASABYAAAAbAAcAAAASABYAAAAbAAgAAAASABYAAAAbAAYAAAASABYAAAAdAAoAAAASABYAAAAcAAoAAAASABYAAAAbAAoAAAASABYAAAAbAAsAAAASABYAAAAbAAwAAAASABYAAAAcAAwAAAASABYAAAAcAAsAAAASABYAAAAbAA4AAAASABYAAAAbAA8AAAASABYAAAAcAA8AAAASABYAAAAcAA4AAAASABYAAAAdAA4AAAASABYAAAAdAA8AAAASABYAAAAdABAAAAASABYAAAAdABIAAAASABYAAAAcABIAAAASABYAAAAdABMAAAASABYAAAAcABMAAAASABYAAAAdABQAAAASABYAAAAcABQAAAASABYAAAAbABQAAAASABYAAAAfAAcAAAASABYAAAAfAAgAAAASABYAAAAgAAgAAAASABYAAAAgAAcAAAASABYAAAAhAAgAAAASABYAAAAhAAcAAAASABYAAAAhAAYAAAASABYAAAAfAAoAAAASABYAAAAfAAsAAAASABYAAAAfAAwAAAASABYAAAAgAAsAAAASABYAAAAgAAoAAAASABYAAAAgAAwAAAASABYAAAAhAAwAAAASABYAAAAgAA4AAAASABYAAAAfAA4AAAASABYAAAAfAA8AAAASABYAAAAgAA8AAAASABYAAAAhAA8AAAASABYAAAAhAA4AAAASABYAAAAfABAAAAASABYAAAAfABIAAAASABYAAAAgABIAAAASABYAAAAhABIAAAASABYAAAAhABMAAAASABYAAAAhABQAAAASABYAAAAgABQAAAASABYAAAAgABMAAAASABYAAAAkAAcAAAASABYAAAAkAAgAAAASABYAAAAlAAgAAAASABYAAAAlAAcAAAASABYAAAAjAAYAAAASABYAAAAjAAsAAAASABYAAAAjAAwAAAASABYAAAAkAAwAAAASABYAAAAkAAsAAAASABYAAAAlAAoAAAASABYAAAAkAA4AAAASABYAAAAjAA4AAAASABYAAAAjAA8AAAASABYAAAAkAA8AAAASABYAAAAlABAAAAASABYAAAAlABIAAAASABYAAAAkABIAAAASABYAAAAkABMAAAASABYAAAAlABMAAAASABYAAAAjABQAAAASABYAAAAgAAAAAAABAAUAAAAhAAAAAAABAAUAAAAiAAAAAAABAAUAAAAjAAAAAAABAAUAAAAkAAAAAAABAAUAAAAoAAcAAAASABYAAAAoAAgAAAASABYAAAApAAgAAAASABYAAAApAAcAAAASABYAAAAnAAsAAAASABYAAAAnAAwAAAASABYAAAAoAAwAAAASABYAAAAoAAsAAAASABYAAAAnAA4AAAASABYAAAAnAA8AAAASABYAAAAoAA8AAAASABYAAAAoAA4AAAASABYAAAAoABIAAAASABYAAAAoABMAAAASABYAAAApABMAAAASABYAAAApABIAAAASABYAAAAXAAYAAAAQABYAAAAZAAoAAAAQABYAAAAZABAAAAAQABYAAAAXABQAAAAQABYAAAAbABIAAAAQABYAAAAbABMAAAAQABYAAAAbABAAAAAQABYAAAAcABAAAAAQABYAAAAdAAsAAAAQABYAAAAdAAwAAAAQABYAAAAcAAYAAAAQABYAAAAdAAYAAAAQABYAAAAfAAYAAAAQABYAAAAgAAYAAAAQABYAAAAhAAoAAAAQABYAAAAhAAsAAAAQABYAAAAhABAAAAAQABYAAAAgABAAAAAQABYAAAAfABMAAAAQABYAAAAfABQAAAAQABYAAAAjABIAAAAQABYAAAAjABMAAAAQABYAAAAkABQAAAAQABYAAAAlABQAAAAQABYAAAAlAA4AAAAQABYAAAAlAA8AAAAQABYAAAAkABAAAAAQABYAAAAjABAAAAAQABYAAAAlAAsAAAAQABYAAAAlAAwAAAAQABYAAAAkAAoAAAAQABYAAAAjAAoAAAAQABYAAAAjAAcAAAAQABYAAAAjAAgAAAAQABYAAAAkAAYAAAAQABYAAAAlAAYAAAAQABYAAAAnAAcAAAAQABYAAAAnAAgAAAAQABYAAAAnAAYAAAAQABYAAAAoAAYAAAAQABYAAAApAAYAAAAQABYAAAAnAAoAAAAQABYAAAAoAAoAAAAQABYAAAApAAoAAAAQABYAAAApAAsAAAAQABYAAAApAAwAAAAQABYAAAApAA4AAAAQABYAAAApAA8AAAAQABYAAAApABAAAAAQABYAAAAoABAAAAAQABYAAAAnABAAAAAQABYAAAAnABIAAAAQABYAAAAnABMAAAAQABYAAAAnABQAAAAQABYAAAAoABQAAAAQABYAAAApABQAAAAQABYAAAAVAAsAAAASABYAAAAVAAwAAAASABYAAAAVAAYAAAASABYAAAAUAAYAAAASABYAAAARAAoAAAASABYAAAARAAsAAAASABYAAAARABAAAAASABYAAAAQABAAAAASABYAAAAUABAAAAASABYAAAATABAAAAASABYAAAATABIAAAASABYAAAATABMAAAASABYAAAAPABMAAAASABYAAAAPABQAAAASABYAAAACAAEAAAABAAUAAAD//xcAAAASABYAAAD//xgAAAASABYAAAD//xkAAAASABYAAAAAABkAAAASABYAAAABABgAAAASABYAAAABABcAAAASABYAAAAAABcAAAASABYAAAAAABgAAAASABYAAAABABkAAAASABYAAAADABcAAAASABYAAAADABgAAAASABYAAAADABkAAAASABYAAAAEABkAAAASABYAAAAFABkAAAASABYAAAAFABgAAAASABYAAAAFABcAAAASABYAAAAEABcAAAASABYAAAAEABgAAAASABYAAAAHABcAAAASABYAAAAHABgAAAASABYAAAAHABkAAAASABYAAAAIABkAAAASABYAAAAJABkAAAASABYAAAAJABgAAAASABYAAAAJABcAAAASABYAAAAIABcAAAASABYAAAAIABgAAAASABYAAAALABcAAAASABYAAAALABgAAAASABYAAAALABkAAAASABYAAAAMABkAAAASABYAAAANABgAAAASABYAAAANABcAAAASABYAAAAMABcAAAASABYAAAAMABgAAAASABYAAAANABkAAAASABYAAAAPABcAAAAQABYAAAAPABgAAAAQABYAAAAPABkAAAASABYAAAAQABcAAAAQABYAAAAQABgAAAAQABYAAAAQABkAAAASABYAAAARABcAAAASABYAAAARABgAAAASABYAAAARABkAAAASABYAAAATABcAAAASABYAAAATABgAAAASABYAAAATABkAAAASABYAAAAUABcAAAAQABYAAAAUABgAAAAQABYAAAAUABkAAAASABYAAAAVABcAAAAQABYAAAAVABgAAAAQABYAAAAVABkAAAASABYAAAAXABcAAAASABYAAAAXABgAAAASABYAAAAXABkAAAASABYAAAAYABcAAAASABYAAAAYABgAAAAQABYAAAAYABkAAAAQABYAAAAZABcAAAASABYAAAAZABgAAAAQABYAAAAZABkAAAAQABYAAAAbABcAAAASABYAAAAbABgAAAAQABYAAAAbABkAAAAQABYAAAAcABcAAAASABYAAAAcABgAAAAQABYAAAAcABkAAAAQABYAAAAdABcAAAASABYAAAAdABgAAAASABYAAAAdABkAAAASABYAAAAfABcAAAASABYAAAAfABgAAAASABYAAAAfABkAAAAQABYAAAAgABcAAAASABYAAAAgABgAAAASABYAAAAgABkAAAAQABYAAAAhABcAAAASABYAAAAhABgAAAASABYAAAAhABkAAAASABYAAAAjABcAAAAQABYAAAAjABgAAAAQABYAAAAjABkAAAASABYAAAAkABcAAAASABYAAAAkABgAAAASABYAAAAkABkAAAASABYAAAAlABcAAAASABYAAAAlABgAAAASABYAAAAlABkAAAASABYAAAAnABcAAAASABYAAAAnABgAAAASABYAAAAnABkAAAASABYAAAAoABcAAAAQABYAAAAoABgAAAASABYAAAAoABkAAAASABYAAAApABcAAAAQABYAAAApABgAAAASABYAAAApABkAAAASABYAAAArABcAAAASABYAAAArABgAAAASABYAAAArABkAAAASABYAAAAsABcAAAASABYAAAAsABgAAAASABYAAAAsABkAAAASABYAAAAtABcAAAASABYAAAAtABgAAAAQABYAAAAtABkAAAAQABYAAAAvABcAAAASABYAAAAvABgAAAASABYAAAAvABkAAAASABYAAAAwABcAAAASABYAAAAwABgAAAASABYAAAAwABkAAAASABYAAAAxABcAAAAQABYAAAAxABgAAAAQABYAAAAxABkAAAASABYAAAAzABcAAAASABYAAAAzABgAAAASABYAAAAzABkAAAASABYAAAA0ABcAAAASABYAAAA0ABgAAAASABYAAAA0ABkAAAAQABYAAAA1ABcAAAASABYAAAA1ABgAAAASABYAAAA1ABkAAAAQABYAAAA3ABcAAAASABYAAAA3ABgAAAAQABYAAAA3ABkAAAAQABYAAAA4ABcAAAASABYAAAA4ABgAAAASABYAAAA4ABkAAAASABYAAAA5ABcAAAASABYAAAA5ABgAAAASABYAAAA5ABkAAAASABYAAAA7ABcAAAAQABYAAAA7ABgAAAASABYAAAA7ABkAAAASABYAAAA8ABcAAAAQABYAAAA8ABgAAAASABYAAAA8ABkAAAASABYAAAA9ABcAAAASABYAAAA9ABgAAAASABYAAAA9ABkAAAASABYAAAA/ABcAAAASABYAAAA/ABgAAAASABYAAAA/ABkAAAASABYAAABAABcAAAASABYAAABAABgAAAASABYAAABAABkAAAASABYAAABBABcAAAASABYAAABBABgAAAASABYAAABBABkAAAAQABYAAABDABcAAAASABYAAABDABgAAAASABYAAABDABkAAAAQABYAAABEABcAAAASABYAAABEABgAAAASABYAAABEABkAAAASABYAAABFABcAAAASABYAAABFABgAAAASABYAAABFABkAAAASABYAAABHABcAAAAQABYAAABHABgAAAASABYAAABHABkAAAASABYAAABIABcAAAASABYAAABIABgAAAASABYAAABIABkAAAASABYAAABJABcAAAASABYAAABJABgAAAASABYAAABJABkAAAASABYAAABLABcAAAASABYAAABLABgAAAASABYAAABLABkAAAASABYAAABMABcAAAASABYAAABMABgAAAASABYAAABMABkAAAASABYAAABNABcAAAAQABYAAABNABgAAAASABYAAABNABkAAAASABYAAAAfABsAAAAQABYAAAAfABwAAAAQABYAAAAfAB0AAAAQABYAAAAgABsAAAAQABYAAAAgABwAAAAQABYAAAAgAB0AAAAQABYAAAAhABsAAAASABYAAAAhABwAAAASABYAAAAhAB0AAAASABYAAAAjABsAAAAQABYAAAAjABwAAAAQABYAAAAjAB0AAAASABYAAAAkABsAAAAQABYAAAAkABwAAAAQABYAAAAkAB0AAAASABYAAAAlABsAAAAQABYAAAAlABwAAAAQABYAAAAlAB0AAAASABYAAAAnABsAAAASABYAAAAnABwAAAASABYAAAAnAB0AAAASABYAAAAoABsAAAAQABYAAAAoABwAAAAQABYAAAAoAB0AAAAQABYAAAApABsAAAAQABYAAAApABwAAAAQABYAAAApAB0AAAAQABYAAAArABsAAAASABYAAAArABwAAAAQABYAAAArAB0AAAAQABYAAAAsABsAAAASABYAAAAsABwAAAAQABYAAAAsAB0AAAAQABYAAAAtABsAAAASABYAAAAtABwAAAAQABYAAAAtAB0AAAAQABYAAAAvABsAAAAQABYAAAAvABwAAAAQABYAAAAvAB0AAAASABYAAAAwABsAAAAQABYAAAAwABwAAAAQABYAAAAwAB0AAAASABYAAAAxABsAAAAQABYAAAAxABwAAAAQABYAAAAxAB0AAAASABYAAAAzABsAAAASABYAAAAzABwAAAASABYAAAAzAB0AAAASABYAAAA0ABsAAAAQABYAAAA0ABwAAAAQABYAAAA0AB0AAAAQABYAAAA1ABsAAAAQABYAAAA1ABwAAAAQABYAAAA1AB0AAAAQABYAAAA3ABsAAAASABYAAAA3ABwAAAAQABYAAAA3AB0AAAAQABYAAAA4ABsAAAASABYAAAA4ABwAAAAQABYAAAA4AB0AAAAQABYAAAA5ABsAAAASABYAAAA5ABwAAAAQABYAAAA5AB0AAAAQABYAAAA7ABsAAAAQABYAAAA7ABwAAAAQABYAAAA7AB0AAAAQABYAAAA8ABsAAAAQABYAAAA8ABwAAAAQABYAAAA8AB0AAAAQABYAAAA9ABsAAAASABYAAAA9ABwAAAASABYAAAA9AB0AAAASABYAAAA/ABsAAAASABYAAAA/ABwAAAASABYAAAA/AB0AAAASABYAAABAABsAAAAQABYAAABAABwAAAAQABYAAABAAB0AAAASABYAAABBABsAAAAQABYAAABBABwAAAAQABYAAABBAB0AAAAQABYAAABDABsAAAAQABYAAABDABwAAAAQABYAAABDAB0AAAAQABYAAABEABsAAAAQABYAAABEABwAAAAQABYAAABEAB0AAAASABYAAABFABsAAAASABYAAABFABwAAAASABYAAABFAB0AAAASABYAAABHABsAAAAQABYAAABHABwAAAASABYAAABHAB0AAAASABYAAABIABsAAAAQABYAAABIABwAAAAQABYAAABIAB0AAAASABYAAABJABsAAAAQABYAAABJABwAAAAQABYAAABJAB0AAAASABYAAABLABsAAAASABYAAABLABwAAAASABYAAABLAB0AAAASABYAAABMABsAAAASABYAAABMABwAAAAQABYAAABMAB0AAAAQABYAAABNABsAAAAQABYAAABNABwAAAAQABYAAABNAB0AAAAQABYAAAA=")
tile_set = ExtResource("1_u8ykh")

[node name="Map Generator" type="Node2D" parent="Tile_Map/Tile_Set"]
script = ExtResource("2_s0cup")

[node name="Ground" type="TileMapLayer" parent="Tile_Map"]
z_index = -1
tile_set = ExtResource("1_u8ykh")

[connection signal="drag_ended" from="CharacterBody2D/Camera2D/Control/Frequency" to="Tile_Map/Tile_Set/Map Generator" method="_on_frequency_drag_ended"]
[connection signal="drag_ended" from="CharacterBody2D/Camera2D/Control/Depth" to="Tile_Map/Tile_Set/Map Generator" method="_on_depth_drag_ended"]
[connection signal="drag_ended" from="CharacterBody2D/Camera2D/Control/Water Level" to="Tile_Map/Tile_Set/Map Generator" method="_on_water_level_drag_ended"]
[connection signal="drag_ended" from="CharacterBody2D/Camera2D/Control/Height Resolution" to="Tile_Map/Tile_Set/Map Generator" method="_on_height_resolution_drag_ended"]
